--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ project(":desktop") {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        compile "games.spooky.gdx:gdx-nativefilechooser-desktop:1.0.0"
 
     }
 }
@@ -58,6 +59,7 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "games.spooky.gdx:gdx-nativefilechooser:1.0.0"
 
     }
 }
