--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,7 @@
 sourceCompatibility = 1.7
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.16'
+    implementation 'junit:junit:4.13.1'
 }
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
