--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -41,3 +41,21 @@ dependencies {
 dist.dependsOn classes
 
 eclipse.project.name = appName + "-desktop"
+
+
+//JUnit 5
+//plugins {
+//    id  'java'
+//}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
+}
+
+test {
+    useJUnitPlatform()
+}
