--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,4 @@
-sourceCompatibility = 1.7
+sourceCompatibility = JavaVersion.VERSION_1_8
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.16'
     implementation 'junit:junit:4.13.1'
